Added reserve table calculation
Added a test function to pass variable

--- a/Restaurant_app/reserve_table.html
+++ b/Restaurant_app/reserve_table.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-    <title>Login Form</title>
+    <title>Reserve Table</title>
     <link rel="stylesheet" href="client/css/style_login.css">
 </head>
 
 <body>
 
-
+    
 
 
 
