--- a/Restaurant_app/reserve_table.html
+++ b/Restaurant_app/reserve_table.html
@@ -6,7 +6,21 @@
 </head>
 
 <body>
-
+    <div class="something">
+        <div class="form-a">
+            <div class="form-button">
+                <div id="btn"></div>
+                <h1 class="login_page">Table Selector</h1>
+                <form>
+                    <label for="quantity" style="color:  white;">Number of seats</label>
+                    <input type="number" id="noOfSeats" name="noOfSeats" value="1" min="1" max="5">
+                    <input type="submit">
+                  </form>
+                <!--<button type = "button" class = "toggle-btn" onclick = "p_register()"> Register</button> -->
+            </div>
+        </div>
+    </div>
+</body>
     
 
 
