--- a/Restaurant_app/reserve_table.html
+++ b/Restaurant_app/reserve_table.html
@@ -7,24 +7,37 @@
 
 <body>
     <div class="something">
-        <div class="form-a">
+        <div class="form-b">
             <div class="form-button">
                 <div id="btn"></div>
                 <h1 class="login_page">Table Selector</h1>
-                <form>
+                <form class="table_reserve">
                     <label for="quantity" style="color:  white;">Number of seats</label>
                     <input type="number" id="noOfSeats" name="noOfSeats" value="1" min="1" max="5">
                     <input type="submit">
-                  </form>
+                </form>
+                <br>
+                <div id="tableMap">
+                    <div class="map">
+                        <img class="auto_fit_img" src="client/css/Restaurant_design.png" />
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(345px, -55px);" id = "A1">A1</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(477px, -55px);" id = "A2">A2</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(615px, -218px);" id = "A3">A3</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(615px, -353px);" id = "A4">A4</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(329px, -138px);" id = "B1">B1</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(476px, -138px);" id = "B2">B2</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(525px, -240px);" id = "B3">B3</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(525px, -349px);" id = "B4">B4</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(271px, -305px);" id = "C1">C1</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(394px, -241px);" id = "C2">C2</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(390px, -364px);" id = "C3">C3</button>
+                        <button class="btn" onclick="selectedTableUpdater(this.id)" style="transform: translate(197px, -126px);" id = "D1">D1</button>
+                    </div>
+                </div>
                 <!--<button type = "button" class = "toggle-btn" onclick = "p_register()"> Register</button> -->
             </div>
         </div>
     </div>
-</body>
-    
-
-
-
 </body>
 <script src="client/js/reserve_table.js"></script>
 
