--- a/Restaurant_app/reserve_table.html
+++ b/Restaurant_app/reserve_table.html
@@ -13,7 +13,7 @@
                 <h1 class="login_page">Table Selector</h1>
                 <form class="table_reserve">
                     <label for="quantity" style="color:  white;">Number of seats</label>
-                    <input type="number" id="noOfSeats" name="noOfSeats" value="1" min="1" max="5">
+                    <input type="number" id="noOfSeats" onchange="updateMapToSeatNum(this.value)" name="noOfSeats" value="1" min="1" max="5">
                     <input type="submit">
                 </form>
                 <br>
