--- a/Restaurant_app/welcome_page.html
+++ b/Restaurant_app/welcome_page.html
@@ -7,8 +7,14 @@
 
 <body>
     <div class = "bkg">
+        <!-- <button class = "btn-welcome" type="button" class="submit-btn" onclick="window.location.href='login.html'">Welcome</button> -->
+        <button class = "btn-welcome" type="button" class="submit-btn">Welcome</button>
+        <button class = "btn-menu" type="button" class="submit-btn">Menu</button>
+        <button class = "btn-order" type="button" class="submit-btn">Order</button>
+        <button class = "btn-press" type="button" class="submit-btn">Press</button>
+        <button class = "btn-contacts" type="button" class="submit-btn">Contacts</button>
         <h1 class="title_name">Name</h1>
-        <button class = "buttons" type="button" class="submit-btn">Reservation</button>
+        <button class = "buttons" type="button" class="submit-btn" onclick = "window.location.href='rest_login.html'">Reservation</button>
         <div class = "pic_row">
             <div class = "pic_col">
                 <img src="client/css/pic1.jpg" height="700" width="700">
