--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -12,7 +12,7 @@
         <button class = "btn-order" type="button" class="submit-btn">Order</button>
         <button class = "btn-press" type="button" class="submit-btn">Press</button>
         <button class = "btn-contacts" type="button" class="submit-btn">Contacts</button>
-        <h1 class="title_name">Name</h1>
+        <h1 class="title_name">Le Restäuränt</h1>
         <div class="form-a">
             <p>
                 <label for="user" class="userNa">Username</label>
