--- a/Restaurant_app/rest_login.html
+++ b/Restaurant_app/rest_login.html
@@ -12,7 +12,7 @@
         <button class = "btn-order" type="button" class="submit-btn">Order</button>
         <button class = "btn-press" type="button" class="submit-btn">Press</button>
         <button class = "btn-contacts" type="button" class="submit-btn">Contacts</button>
-        <h1 class="title_name">Name</h1>
+        <h1 class="title_name">Le Restäuränt</h1>
         <div class="form-a">
             <div class = "side by side">
                 <div class="user_field">
@@ -37,5 +37,6 @@
         </div>
     </div>
 </body>
+<script src="client/js/login_func.js"></script>
 
 </html>
