--- a/Restaurant_app/welcome_page.html
+++ b/Restaurant_app/welcome_page.html
@@ -13,7 +13,7 @@
         <button class = "btn-order" type="button" class="submit-btn">Order</button>
         <button class = "btn-press" type="button" class="submit-btn">Press</button>
         <button class = "btn-contacts" type="button" class="submit-btn">Contacts</button>
-        <h1 class="title_name">Name</h1>
+        <h1 class="title_name">Le Restäuränt</h1>
         <button class = "buttons" type="button" class="submit-btn" onclick = "window.location.href='rest_login.html'">Reservation</button>
         <div class = "pic_row">
             <div class = "pic_col">
