Major changes to reserve_table.html
Added reserve_info.html
Update, improve some css.

--- a/Restaurant_app/rest_login.html
+++ b/Restaurant_app/rest_login.html
@@ -31,7 +31,7 @@
 
                 <div class="guest_field">
                     <h2 class="login_page">Guest</h2>
-                    <button class="reserv" onclick="reserveTable()">Reserve Table</button>
+                    <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
                 </div>
             </div>
         </div>
