--- a/Restaurant_app/welcome_page.html
+++ b/Restaurant_app/welcome_page.html
@@ -15,12 +15,15 @@
         <button class = "btn-contacts" type="button" class="submit-btn">Contacts</button>
         <h1 class="title_name">Le Restäuränt</h1>
         <button class = "buttons" type="button" class="submit-btn" onclick = "window.location.href='rest_login.html'">Reservation</button>
+        <br>
+        <br>
+        <br>
         <div class = "pic_row">
-            <div class = "pic_col">
-                <img src="client/css/pic1.jpg" height="700" width="700">
+            <div class = "pic_col_left">
+                <img src="client/css/pic1.jpg" height="auto" width="70%">
             </div>
-            <div class = "pic_col">
-                <img src="client/css/pic2.jpg" height="700" width="700">
+            <div class = "pic_col_right">
+                <img src="client/css/pic2.jpg" height="auto" width="70%">
             </div>
         </div>
 
