Major update to reserve_info and reserve_table.
Both js and html files got updated.

--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -18,7 +18,7 @@
                 <label for="user" class="userNa">Username</label>
                 <label for="pass" class="passN" >Password</label>
             </p>
-                <input type = "text"  class = "userN" id="gallonsreq" oninput = "change()"  required>
+                <input type = "text"  class = "userN" id="gallonsreq"  required>
                 <input type = "address"  class = "pass" id="deliveryadr"  required >
 
             <p><label for="fname" class="nameN">Full Name</label> </p>
