--- a/Restaurant_app/welcome_page.html
+++ b/Restaurant_app/welcome_page.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="client/css/welcome_page.css">
 </head>
 
-<body>
+<body onload="{localStorage.clear();}">
     <div class = "bkg">
         <!-- <button class = "btn-welcome" type="button" class="submit-btn" onclick="window.location.href='login.html'">Welcome</button> -->
         <button class = "btn-welcome" type="button" class="submit-btn">Welcome</button>
