--- a/Restaurant_app/reserve_table.html
+++ b/Restaurant_app/reserve_table.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <form class="table_reserve" method="post">
-                    <input type="submit" class="submit-btn" value="Reserve" onclick="reservedTablePost()">
+                    <input type="button" id="submit_table" type="submit" class="submit-btn" value="Reserve" onclick="reservedTablePost()">
                 </form>
             </div>
         </div>
