--- a/Restaurant_app/reserve_info.html
+++ b/Restaurant_app/reserve_info.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Register</title>
+    <title>Reservation</title>
     <link rel="stylesheet" href="client/css/register_page.css">
 </head>
 
@@ -20,11 +20,11 @@
                 <input type="text" class="firstN" id="firstN" placeholder="First Name" required />
                 <input type="text" class="lastN" id="lastN" placeholder="Last Name" required />
 
-                <p><label for="EmailAdd" class="mailN">Email Address</label> </p>
+                <!-- <p><label for="EmailAdd" class="mailN">Email Address</label> </p>
                 <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" required />
 
                 <p><label for="PhoneNum" class="billN">Phone Number</label></p>
-                <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" />
+                <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" /> -->
 
                 <p><label for="date" class="date">Reservation Date</label></p>
                 <input type="date" class="bill" id="date" value="Date" onchange="getTableMap(); checkHoliday();" required/>
