--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -25,14 +25,20 @@
                 <input type="text" name="ddate" class = "firstN" id="ddate" placeholder = "First Name"required />
                 <input type="text" name="ddate" class = "lastN" id="ddate" placeholder = "Last Name"required />
 
+            <p><label for="EmailAdd" class="mailN">Email Address</label> </p>
+                <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" required />
+
+            <p><label for="PhoneNum" class="billN">Phone Number</label></p>
+                <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" />
+
             <p><label for="maillAdd" class="mailN">Mailing Address</label> </p>
                 <input type="text" name="suggestedp" class = "mail" id="suggestedp" placeholder = "112 Stoke Dr."  required/>
             
             <p><label for="billAdd" class="billN">Billing Address</label></p>
                 <input type="text" name="totalamt" class = "bill" id="totalamt" placeholder = "112 Stoke Dr."  />
 
-            <p><label for="preferPay" class="payN">Preferred Payment</label></p>
-                <input type="text" name="totalamt" class = "pay" id="totalamt" placeholder = 0  required/>
+            <!-- <p><label for="preferPay" class="payN">Preferred Payment</label></p>
+                <input type="text" name="totalamt" class = "pay" id="totalamt" placeholder = 0  required/> -->
 
             <p>
             <button type="button" class = "submit-btn">Register</button>
