--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -17,9 +17,8 @@
             <div class = "side by side">
                 <div class="user_field">
                     <hr class="vertical">
-                    <h2 class="login_page">Welcome xxx</h2>
+                    <h2 class="login_page1">Welcome xxx</h2>
                     <form id="login" class="inputs11">
-                        
                         <p><label class = "u_email" >Email</label></p>
                         <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" required readonly/>
                         <a class = "regist" type="text" href="register_page.html">Edit</a>
@@ -36,7 +35,7 @@
                 </div>
 
                 <div class="guest_field">
-                    <h2 class="login_page">Options</h2>
+                    <h2 class="login_page2">Options</h2>
                     <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
                     <button class="log" onclick="reserveInfo()">Log Out</button>
                 </div>
