--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -13,37 +13,41 @@
         <button class = "btn-press" type="button" class="submit-btn">Press</button>
         <button class = "btn-contacts" type="button" class="submit-btn">Contacts</button>
         <h1 class="title_name">Le Restäuränt</h1>
+        <form id = "register" class = "inputs">
         <div class="form-a">
             <p>
                 <label for="user" class="userNa">Username</label>
                 <label for="pass" class="passN" >Password</label>
             </p>
-                <input type = "text"  class = "userN" id="gallonsreq"  required>
-                <input type = "address"  class = "pass" id="deliveryadr"  required >
+                <input type = "text"  class = "userN" id="r_user"  required>
+                <input type = "text"  class = "pass" id="r_pass"  required >
 
             <p><label for="fname" class="nameN">Full Name</label> </p>
-                <input type="text" name="ddate" class = "firstN" id="ddate" placeholder = "First Name"required />
-                <input type="text" name="ddate" class = "lastN" id="ddate" placeholder = "Last Name"required />
+                <input type="text" name="ddate" class = "firstN" id="nameF" placeholder = "First Name"required />
+                <input type="text" name="ddate" class = "lastN" id="nameL" placeholder = "Last Name"required />
 
             <p><label for="EmailAdd" class="mailN">Email Address</label> </p>
-                <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" required />
+                <input type="email" class="mail" id="mailE" size="30" placeholder="JohnSmith@mail.com" required />
 
             <p><label for="PhoneNum" class="billN">Phone Number</label></p>
-                <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" />
+                <input type="text" class="bill" id="numP" placeholder="xxx-xxx-xxxx" />
 
             <p><label for="maillAdd" class="mailN">Mailing Address</label> </p>
-                <input type="text" name="suggestedp" class = "mail" id="suggestedp" placeholder = "112 Stoke Dr."  required/>
+                <input type="text" name="suggestedp" class = "mail" id="mailA" placeholder = "112 Stoke Dr."  required/>
             
             <p><label for="billAdd" class="billN">Billing Address</label></p>
-                <input type="text" name="totalamt" class = "bill" id="totalamt" placeholder = "112 Stoke Dr."  />
+                <input type="text" name="totalamt" class = "bill" id="billA" placeholder = "112 Stoke Dr."  />
 
             <!-- <p><label for="preferPay" class="payN">Preferred Payment</label></p>
                 <input type="text" name="totalamt" class = "pay" id="totalamt" placeholder = 0  required/> -->
 
             <p>
-            <button type="button" class = "submit-btn">Register</button>
+                <form class="table_reserve" method="post">
+                    <input type="button" id="submit_table" type="submit" class="submit-btn" value="Reserve" onclick="insertUserCred()">
+                </form>
             <p>
         </div>
+        </form>
     </div>
 </body>
 <script src="client/js/login_func.js"></script>
