Added point to profile page.

--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -18,6 +18,7 @@
                 <div class="user_field">
                     <hr class="vertical">
                     <h2 class="login_page1">Welcome xxx</h2>
+                    <h3 class="profile_page">Your Loyalty Points: </h3>
                     <form id="login" class="inputs11">
                         <p><label class = "u_email" >Email</label></p>
                         <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" required readonly/>
@@ -37,7 +38,7 @@
                 <div class="guest_field">
                     <h2 class="login_page2">Options</h2>
                     <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
-                    <button class="log" onclick="reserveInfo()">Log Out</button>
+                    <button class="log" href="welcome_page.html">Log Out</button>
                 </div>
             </div>
         </div>
