--- a/Restaurant_app/rest_login.html
+++ b/Restaurant_app/rest_login.html
@@ -17,8 +17,8 @@
             <div class = "side by side">
                 <div class="user_field">
                     <hr class="vertical">
-                    <h2 class="login_page">User</h2>
-                    <form id="login" class="inputs">
+                    <h2 class="login_page2">User</h2>
+                    <form id="login" class="inputs11">
                         <input id="l_user" name="user" type="text" class="input-field" placeholder="Username" required>
                         <input id="l_pass" name="pass" type="text" class="input-field" placeholder="Password" required>
                         <button type="button" class="login" onclick="success_login()">Sign In</button>
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="guest_field">
-                    <h2 class="login_page">Guest</h2>
+                    <h2 class="login_page2">Guest</h2>
                     <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
                 </div>
             </div>
