--- a/Restaurant_app/reserve_info.html
+++ b/Restaurant_app/reserve_info.html
@@ -27,26 +27,32 @@
                 <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" />
 
                 <p><label for="date" class="date">Reservation Date</label></p>
-                <input type="date" class="bill" id="date" value="Date" onchange="getTableMap(); checkHoliday();" required/>
+                <input type="date" class="bill" id="date" value="Date" onchange="getTableMap(); checkHoliday();"
+                    required />
 
                 <p><label for="time" class="time">Reservation Time</label></p>
                 <!--<input type="time" class="bill" id="time" min="09:00" value="09:00" max= "19:00" required/>-->
                 <select name="time" id="time" value="9" class="pay" onchange="getTableMap()" required>
-                    
+
                 </select>
 
                 <p><label for="quantity" class="time" id="noOfSeatsLabel">Number of seats:</label></p>
                 <input class="pay" type="number" id="noOfSeats" name="noOfSeats" value="1" min="1" max="1" required>
 
+                <div id="$10ConsentCheckbox_div">
+                    <p><label class="billN" for="$10ConsentCheckbox"> It's a busy day! You will be charged $10 if you want to cancel your reservation.</label></p>
+                    <input type="checkbox" class="consentbox" id="$10ConsentCheckbox" name="$10" required><br>
+                </div>
                 <p><label for="preferPay" class="payN">Preferred Payment</label></p>
-
+                
                 <select class="pay" id="preferPay" required>
                     <option value="Cash">Cash</option>
                     <option value="Valid_Creditcard">Valid Creditcard</option>
                     <option value="Invalid_Creditcard">Invalid Creditcard (for testing purposes)</option>
                 </select>
                 <p>
-                    <input type="button" id="submit_info" type="submit" class="submit-btn" value="Select Table" onclick="checkCard()">
+                    <input type="button" id="submit_info" type="submit" class="submit-btn" value="Select Table"
+                        onclick="checkCard()">
                 </p>
             </div>
         </form>
