--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -42,9 +42,7 @@
                 <input type="text" name="totalamt" class = "pay" id="totalamt" placeholder = 0  required/> -->
 
             <p>
-                <form class="table_reserve" method="post">
-                    <input type="button" id="submit_table" type="submit" class="submit-btn" value="Reserve" onclick="insertUserCred()">
-                </form>
+                    <button onclick="insertUserCred()">Register</button>
             <p>
         </div>
         </form>
