--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -44,6 +44,6 @@
         </div>
     </div>
 </body>
-<script src="client/js/login_func.js"></script>
+<script src="client/js/profile_page.js"></script>
 
 </html>
