--- a/Restaurant_app/rest_login.html
+++ b/Restaurant_app/rest_login.html
@@ -20,7 +20,7 @@
                     <h2 class="login_page2">User</h2>
                     <form id="login" class="inputs11">
                         <input id="l_user" name="user" type="text" class="input-field" placeholder="Username" required>
-                        <input id="l_pass" name="pass" type="text" class="input-field" placeholder="Password" required>
+                        <input id="l_pass" name="pass" type="password" class="input-field" placeholder="Password" required>
                         <button type="button" class="login" onclick="success_login()">Sign In</button>
                     </form>
 
