--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -6,34 +6,38 @@
 </head>
 
 <body>
-    <div class = "bkg">
-        <button class = "btn-welcome" type="button" class="submit-btn" onclick = "window.location.href='welcome_page.html'">Welcome</button>
-        <button class = "btn-menu" type="button" class="submit-btn">Menu</button>
-        <button class = "btn-order" type="button" class="submit-btn">Order</button>
-        <button class = "btn-press" type="button" class="submit-btn">Press</button>
-        <button class = "btn-contacts" type="button" class="submit-btn">Contacts</button>
+    <div class="bkg">
+        <button class="btn-welcome" type="button" class="submit-btn"
+            onclick="window.location.href='welcome_page.html'">Welcome</button>
+        <button class="btn-menu" type="button" class="submit-btn">Menu</button>
+        <button class="btn-order" type="button" class="submit-btn">Order</button>
+        <button class="btn-press" type="button" class="submit-btn">Press</button>
+        <button class="btn-contacts" type="button" class="submit-btn">Contacts</button>
         <h1 class="title_name">Le Restäuränt</h1>
         <div class="form-a">
-            <div class = "side by side">
+            <div class="side by side">
                 <div class="user_field">
                     <hr class="vertical">
                     <h2 class="login_page1" id="welcome">Welcome {Username}</h2>
-                    <div>
-                        <h3 class="profile_page">Your Loyalty Points: </h3>
-                        <h3 class="profile_page" id="points">{Points}</h3>
-                    </div>
+                    <h3 class="profile_page">Your Loyalty Points: </h3>
+                    <h3 class="profile_page" id="points">{Points}</h3>
                     <form id="login" class="inputs11">
-                        <p><label class = "u_email" >Email</label></p>
-                        <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" required readonly/>
-                        <a class = "regist" type="text" href="register_page.html">Edit</a>
+                        <p><label class="u_email">Email</label></p>
+                        <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" readonly/>
+                        <a class="regist" type="text" href="register_page.html">Edit</a>
 
-                        <p><label class = "u_phone" >Phone</label></p>
+                        <p><label class="u_phone">Phone</label></p>
                         <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" readonly/>
-                        <a class = "regist" type="text" href="register_page.html">Edit</a>
+                        <a class="regist" type="text" href="register_page.html">Edit</a>
 
-                        <p><label class = "u_mail" >Mail Address</label></p>
-                        <input type="text" name="suggestedp" class = "mail" id="suggestedp" placeholder = "112 Stoke Dr."  required readonly/>
-                        <a class = "regist" type="text" href="register_page.html">Edit</a>
+                        <p><label class="u_mail">Mailing Address</label></p>
+                        <input type="text" name="suggestedp" class="mail" id="mailAdd" placeholder="112 Stoke Dr."
+                            readonly />
+                        <a class="regist" type="text" href="register_page.html">Edit</a>
+                        <p><label class="u_mail">Billing Address</label></p>
+                        <input type="text" name="suggestedp" class="mail" id="billAdd" placeholder="112 Stoke Dr."
+                            readonly />
+                        <a class="regist" type="text" href="register_page.html">Edit</a>
 
                     </form>
                 </div>
