Reservation look up for guest.
Added reserve_search.js
Added reserve_search.html

--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -45,7 +45,7 @@
                 <div class="guest_field">
                     <h2 class="login_page2">Options</h2>
                     <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
-                    <button class="log" href="welcome_page.html">Log Out</button>
+                    <button class="log" onclick="logOut()">Log Out</button>
                 </div>
             </div>
         </div>
