--- a/Restaurant_app/reserve_info.html
+++ b/Restaurant_app/reserve_info.html
@@ -16,6 +16,8 @@
         <h1 class="title_name">Le Restäuränt</h1>
         <form id="reserve_info_form">
             <div class="form-a">
+                <input type="button" class="back-btn" value="Back" onclick="history.back()">
+
                 <p><label for="fname" class="nameN">Full Name</label> </p>
                 <input type="text" class="firstN" id="firstN" placeholder="First Name" required />
                 <input type="text" class="lastN" id="lastN" placeholder="Last Name" required />
