--- a/Restaurant_app/rest_login.html
+++ b/Restaurant_app/rest_login.html
@@ -32,6 +32,7 @@
                 <div class="guest_field">
                     <h2 class="login_page2">Guest</h2>
                     <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
+                    <button class="reserv_lu" onclick="reserveSearch()">Reservation Look Up</button>
                 </div>
             </div>
         </div>
