delete reservation function
added a delete reservation function to delete in db. potential add on would be checking if reservationid is valid

--- a/Restaurant_app/reserve_search.html
+++ b/Restaurant_app/reserve_search.html
@@ -25,6 +25,7 @@
                 <hr class="resInfo" style="width: 500px;">
                 <p>
                     <input type="button" type="submit" class="search-btn" value="Search For This Reservation Number" onclick="SearchAndShow()">
+                    <button input type="button" id="submit_info" type="submit" class="submit-btn" onclick="cancelRes()">Cancel Reservation</button>
                 </p>
             </div>
         </form>
