--- a/Restaurant_app/reserve_search.html
+++ b/Restaurant_app/reserve_search.html
@@ -22,10 +22,12 @@
                 <p><label for="ResNumber" class="mailN">Reservation Info</label> </p>
                 <hr class="resInfo" style="width: 500px;">
                 <p class="resInfo" id="resInfo"></p>
+                <div id="cancel_field">
+                </div>
                 <hr class="resInfo" style="width: 500px;">
                 <p>
-                    <input type="button" type="submit" class="search-btn" value="Search For This Reservation Number" onclick="SearchAndShow()">
-                    <button input type="button" id="submit_info" type="submit" class="submit-btn" onclick="cancelRes()">Cancel Reservation</button>
+                    <input type="button" type="submit" class="search-btn" value="Search For This Reservation Number"
+                        onclick="SearchAndShow()">
                 </p>
             </div>
         </form>
