--- a/Restaurant_app/reserve_info.html
+++ b/Restaurant_app/reserve_info.html
@@ -23,10 +23,10 @@
                 <input type="text" class="lastN" id="lastN" placeholder="Last Name" required />
 
                 <p><label for="EmailAdd" class="mailN">Email Address</label> </p>
-                <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" required />
+                <input type="email" class="mail" id="EmailAdd" maxlength="30" placeholder="JohnSmith@mail.com" required />
 
                 <p><label for="PhoneNum" class="billN">Phone Number</label></p>
-                <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" />
+                <input type="text" class="bill" id="PhoneNum" maxlength="10" placeholder="xxx-xxx-xxxx" required/>
 
                 <p><label for="date" class="date">Reservation Date</label></p>
                 <input type="date" class="bill" id="date" value="Date" onchange="getTableMap(); checkHoliday();"
