Done user reservation, show and delete.

--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -46,6 +46,7 @@
                     <h2 class="login_page2">Options</h2>
                     <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
                     <button class="log" onclick="logOut()">Log Out</button>
+                    <button class="user_res" onclick="toYourRes()">Your Reservations</button>
                 </div>
             </div>
         </div>
