--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -27,10 +27,10 @@
                 <input type="text" name="ddate" class = "lastN" id="nameL" placeholder = "Last Name"required />
 
             <p><label for="EmailAdd" class="mailN">Email Address</label> </p>
-                <input type="email" class="mail" id="mailE" size="30" placeholder="JohnSmith@mail.com" required />
+                <input type="email" class="mail" id="mailE" maxlength="30" placeholder="JohnSmith@mail.com" required />
 
             <p><label for="PhoneNum" class="billN">Phone Number</label></p>
-                <input type="text" class="bill" id="numP" placeholder="xxx-xxx-xxxx" />
+                <input type="text" class="bill" id="numP" maxlength="10" placeholder="xxx-xxx-xxxx" />
 
             <p><label for="maillAdd" class="mailN">Mailing Address</label> </p>
                 <input type="text" name="suggestedp" class = "mail" id="mailA" placeholder = "112 Stoke Dr."  required/>
