--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -24,20 +24,17 @@
                     <form id="login" class="inputs11">
                         <p><label class="u_email">Email</label></p>
                         <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" readonly/>
-                        <a class="regist" type="text" href="register_page.html">Edit</a>
 
                         <p><label class="u_phone">Phone</label></p>
                         <input type="text" class="bill" id="PhoneNum" placeholder="xxx-xxx-xxxx" readonly/>
-                        <a class="regist" type="text" href="register_page.html">Edit</a>
 
                         <p><label class="u_mail">Mailing Address</label></p>
                         <input type="text" name="suggestedp" class="mail" id="mailAdd" placeholder="112 Stoke Dr."
                             readonly />
-                        <a class="regist" type="text" href="register_page.html">Edit</a>
+
                         <p><label class="u_mail">Billing Address</label></p>
                         <input type="text" name="suggestedp" class="mail" id="billAdd" placeholder="112 Stoke Dr."
                             readonly />
-                        <a class="regist" type="text" href="register_page.html">Edit</a>
 
                     </form>
                 </div>
@@ -45,8 +42,9 @@
                 <div class="guest_field">
                     <h2 class="login_page2">Options</h2>
                     <button class="reserv" onclick="reserveInfo()">Reserve Table</button>
-                    <button class="log" onclick="logOut()">Log Out</button>
                     <button class="user_res" onclick="toYourRes()">Your Reservations</button>
+                    <button class="update_pro" onclick="window.location.href='update_profile.html'">Update Profile</button>
+                    <button class="log" onclick="logOut()">Log Out</button>
                 </div>
             </div>
         </div>
