cancel reservation function

--- a/Restaurant_app/reserve_search.html
+++ b/Restaurant_app/reserve_search.html
@@ -22,6 +22,8 @@
                 <p><label for="ResNumber" class="mailN">Reservation Info</label> </p>
                 <hr class="resInfo" style="width: 500px;">
                 <p class="resInfo" id="resInfo"></p>
+                <div id="confirmation">
+                </div>
                 <div id="cancel_field">
                 </div>
                 <hr class="resInfo" style="width: 500px;">
