Make some changes so they log out automatically when return to Welcome_page.

--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class = "bkg">
-        <button class = "btn-welcome" type="button" class="submit-btn" onclick = "window.location.href='welcome_page.html'">Welcome</button>
+        <button class = "btn-welcome" type="button" class="submit-btn" onclick = "window.location.replace('welcome_page.html')">Welcome</button>
         <button class = "btn-menu" type="button" class="submit-btn">Menu</button>
         <button class = "btn-order" type="button" class="submit-btn">Order</button>
         <button class = "btn-press" type="button" class="submit-btn">Press</button>
