--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -18,9 +18,9 @@
             <div class="side by side">
                 <div class="user_field">
                     <hr class="vertical">
-                    <h2 class="login_page1" id="welcome">Welcome {Username}</h2>
+                    <h2 class="login_page1" id="welcome">Welcome</h2>
                     <h3 class="profile_page">Your Loyalty Points: </h3>
-                    <h3 class="profile_page" id="points">{Points}</h3>
+                    <h3 class="profile_page" id="points"></h3>
                     <form id="login" class="inputs11">
                         <p><label class="u_email">Email</label></p>
                         <input type="email" class="mail" id="EmailAdd" size="30" placeholder="JohnSmith@mail.com" readonly/>
