--- a/Restaurant_app/reserve_search.html
+++ b/Restaurant_app/reserve_search.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="client/css/register_page.css">
 </head>
 
-<body>
+<body onload="{localStorage.clear();}">
     <div class="bkg">
         <button class="btn-welcome" type="button" class="submit-btn"
             onclick="window.location.replace('welcome_page.html')">Welcome</button>
