--- a/Restaurant_app/rest_login.html
+++ b/Restaurant_app/rest_login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="client/css/rest_login.css">
 </head>
 
-<body>
+<body onload="{localStorage.clear();}">
     <div class = "bkg">
         <button class = "btn-welcome" type="button" class="submit-btn" onclick = "window.location.replace('welcome_page.html')">Welcome</button>
         <button class = "btn-menu" type="button" class="submit-btn">Menu</button>
