minor changes, added UI popup instead of alert

--- a/Restaurant_app/profile_page.html
+++ b/Restaurant_app/profile_page.html
@@ -51,5 +51,6 @@
     </div>
 </body>
 <script src="client/js/profile_page.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
