--- a/Restaurant_app/register_page.html
+++ b/Restaurant_app/register_page.html
@@ -51,5 +51,6 @@
     </div>
 </body>
 <script src="client/js/login_func.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
