--- a/Restaurant_app/reserve_info.html
+++ b/Restaurant_app/reserve_info.html
@@ -64,5 +64,6 @@
     </div>
 </body>
 <script src="client/js/reserve_info.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
