--- a/Restaurant_app/reserve_table.html
+++ b/Restaurant_app/reserve_table.html
@@ -58,5 +58,6 @@
     </div>
 </body>
 <script src="client/js/reserve_table.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
