--- a/Restaurant_app/rest_login.html
+++ b/Restaurant_app/rest_login.html
@@ -39,5 +39,6 @@
     </div>
 </body>
 <script src="client/js/login_func.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
