--- a/Restaurant_app/update_profile.html
+++ b/Restaurant_app/update_profile.html
@@ -36,5 +36,6 @@
     </div>
 </body>
 <script src="client/js/profile_page.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
