--- a/Restaurant_app/user_reservations.html
+++ b/Restaurant_app/user_reservations.html
@@ -26,5 +26,6 @@
     </div>
 </body>
 <script src="client/js/user_reservations.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
